Duplicate clang's FixItRewriter class as work around for its missing\broken API

--- a/Sources/idt/CMakeLists.txt
+++ b/Sources/idt/CMakeLists.txt
@@ -1,5 +1,7 @@
 add_executable(idt
-  idt.cc)
+  idt.cc
+  FixItRewriter2.cpp)
+
 target_compile_definitions(idt PRIVATE
   ${LLVM_DEFINITIONS})
 target_compile_options(idt PRIVATE
