Add ExportOptionsConfig to load per directory export macro options from a json file and update code to start using it
Renamed some of the command line options to what there really used for

--- a/Sources/idt/CMakeLists.txt
+++ b/Sources/idt/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_executable(idt
   idt.cc
-  FixItRewriter2.cpp)
+  FixItRewriter2.cpp 
+  ExportOptionsConfig.cpp)
 
 target_compile_definitions(idt PRIVATE
   ${LLVM_DEFINITIONS})
