--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,13 +13,25 @@ set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
-find_package(LLVM REQUIRED)
-message(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
-message(STATUS "Using LLVMConfig.cmake in ${LLVM_DIR}")
+# Allow adding this project as a external project to the LLVM build system using LLVM_EXTERNAL_PROJECTS
+if(CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
+  find_package(LLVM REQUIRED)
+  message(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
+  message(STATUS "Using LLVMConfig.cmake in ${LLVM_DIR}")
 
-find_package(Clang REQUIRED)
-message(STATUS "Found Clang ${Clang_PACKAGE_VERSION}")
-message(STATUS "Using ClangConfig.cmake in ${Clang_DIR}")
+  find_package(Clang REQUIRED)
+  message(STATUS "Found Clang ${Clang_PACKAGE_VERSION}")
+  message(STATUS "Using ClangConfig.cmake in ${Clang_DIR}")
+else()
+  set(CLANG_INCLUDE_DIRS
+    "${LLVM_EXTERNAL_CLANG_SOURCE_DIR}/include"
+    "${CMAKE_BINARY_DIR}/tools/clang/include"
+  )
+  set(LLVM_INCLUDE_DIRS
+    "${CMAKE_SOURCE_DIR}/include"
+    "${CMAKE_BINARY_DIR}/include"
+  )
+endif()
 
 add_subdirectory(Sources)
 add_subdirectory(Tests)
